--- a/Python-para-ML-y-DL/Notebooks/Class2.ipynb
+++ b/Python-para-ML-y-DL/Notebooks/Class2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -97,14 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      " 5 is greater than 4\n"
+      " 12 is greater than 1\n"
      ]
     }
    ],
@@ -215,15 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "loading...\n",
-      "pass\n"
+      "incorrect\n"
      ]
     }
    ],
@@ -251,14 +250,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[<class 'torch.nn.modules.conv.Conv2d'>, <class 'torch.nn.modules.pooling.MaxPool2d'>]\n"
+      "[<class 'torch.nn.modules.conv.Conv2d'>, <class 'torch.nn.modules.batchnorm.BatchNorm2d'>]\n"
      ]
     }
    ],
@@ -306,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,14 +357,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "20 is greater or equal than 15\n"
+      "1 is least than 15\n"
      ]
     }
    ],
@@ -620,7 +619,7 @@
    "source": [
     "lista = [1, 4, 6, 8, 5]\n",
     "a = 5\n",
-    "b = 4\n",
+    "b = 4 \n",
     "if a in lista and b in lista:\n",
     "    lista[lista.index(a)], lista[lista.index(b)] = (\n",
     "        lista[lista.index(b)],\n",
@@ -990,7 +989,6 @@
     "import time\n",
     "import random\n",
     "\n",
-    "\n",
     "def derivadeSigmoid(x):\n",
     "    return Sigmoid(x) * (1 - Sigmoid(x))\n",
     "\n",
@@ -1275,7 +1273,7 @@
    "source": [
     "**Example 2** \n",
     "\n",
-    "defining the [binary cross](https://peltarion.com/knowledge-center/documentation/modeling-view/build-an-ai-model/loss-functions/binary-crossentropy) entropy and using the for loop"
+    "defining the [crossentropy](https://ml-cheatsheet.readthedocs.io/en/latest/loss_functions.html) entropy and using the for loop"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -1299,12 +1297,12 @@
     "Y_hat = [0.05, 0.05, 0.8, 0.05, 0.05]\n",
     "\n",
     "\n",
-    "def binary_cross_entropy(Y, Y_hat, i):\n",
+    "def cross_entropy(Y, Y_hat, i):\n",
     "    return -(1 - Y[i]) * math.log(1 - Y_hat[i]) - Y[i] * math.log(Y_hat[i])\n",
     "\n",
     "\n",
     "for i in range(5):\n",
-    "    sum += binary_cross_entropy(Y, Y_hat, i)\n",
+    "    sum += cross_entropy(Y, Y_hat, i)\n",
     "print(f\"Sum: {sum/5}\")"
    ]
   },
