--- a/Python-para-ML-y-DL/Notebooks/Class3.ipynb
+++ b/Python-para-ML-y-DL/Notebooks/Class3.ipynb
@@ -10,17 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit ('Pytorch': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "71ae0e5628f9c8ae5c6962b1abc3028aa0ba12995fb98bcbaa979d41181ac3b9"
-    }
-   }
+   "name": "python37664bitenvvenv21fe8ca208ed41e988733c4ab5dda3b2",
+   "display_name": "Python 3.7.6 64-bit ('env': venv)",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -137,10 +133,10 @@
     "\n",
     "Note:\n",
     "\n",
-    "- If you lear about the **binary crossentropy** you would see [here](https://towardsdatascience.com/understanding-binary-cross-entropy-log-loss-a-visual-explanation-a3achttps://)\n",
+    "- If you lear about the **crossentropy** you would see [here](https://ml-cheatsheet.readthedocs.io/en/latest/loss_functions.html)\n",
     "\n",
     "<center>\n",
-    "<img src=\"../src/crossontropy.png\" height=\"50%\" width=\"50%\">"
+    "<img src=\"https://gombru.github.io/assets/cross_entropy_loss/intro.png\" height=\"50%\" width=\"50%\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -165,14 +161,14 @@
     ")\n",
     "\n",
     "\n",
-    "def binary_crossentropy(Y, Y_hat):\n",
+    "def crossentropy(Y, Y_hat):\n",
     "    n = len(Y)\n",
     "    return (-1 / n) * np.sum(\n",
     "        np.multiply(Y, np.log(Y_hat)) + np.multiply((1 - Y), np.log(1 - Y_hat)), axis=1\n",
     "    )\n",
     "\n",
     "\n",
-    "loss = binary_crossentropy(Y, Y_hat)\n",
+    "loss = crossentropy(Y, Y_hat)\n",
     "\n",
     "for l in loss:\n",
     "    file = open(\"../src/train.txt\", \"a\")\n",
@@ -977,136 +973,6 @@
     "for d in data[\"intents\"]:\n",
     "    tag = d[\"tag\"]\n",
     "    tags.append(tag)"
-   ]
-  },
-  {
-   "source": [
-    "## Avanzado\n",
-    "#### Modelos preentrenados"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import urllib\n",
-    "\n",
-    "from PIL import Image\n",
-    "import torch\n",
-    "from torchvision import transforms # para convertir la imagen PIL a\n",
-    "                                   # tensor\n",
-    "\n",
-    "# cargamos el modelo preentrenado\n",
-    "model = torch.hub.load('pytorch/vision:v0.9.0', 'mobilenet_v2', pretrained=True)\n",
-    "\n",
-    "# ponemos el modelo  en modo evaluación\n",
-    "model.eval()\n",
-    "\n",
-    "url, filename = (\"https://github.com/pytorch/hub/raw/master/images/dog.jpg\", \"dog.jpg\")\n",
-    "\n",
-    "try: \n",
-    "    # descargamos la imagen\n",
-    "    urllib.URLopener().retrieve(url, filename)\n",
-    "except:\n",
-    "    # INTENTAMOS descargar la imagen de nuevo\n",
-    "    urllib.request.urlretrieve(url, filename)\n",
-    "\n",
-    "# (N, C, H, W) -> PYTORCH\n",
-    "# (N, H, W, C) -> TENSORFLOW\n",
-    "\n",
-    "input_image = Image.open(filename)\n",
-    "\n",
-    "# transformaciones para convertir la imagen a tensor\n",
-    "preprocess = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224), # recorte de la imagen\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(\n",
-    "        mean=[0.485, 0.456, 0.406], \n",
-    "        std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "# el tensor resultante tiene la forma(C, H, W) \n",
-    "input_tensor = preprocess(input_image)\n",
-    "\n",
-    "# añadimos la dimensión de lote para que\n",
-    "# el tensor tenga la forma (1, C, W, H)\n",
-    "input_batch = input_tensor.unsqueeze(0)\n",
-    "\n",
-    "# enviamos el tensor de entrada hacia la gpu,\n",
-    "# y también el modelo\n",
-    "if torch.cuda.is_available():\n",
-    "    input_batch = input_batch.to('cuda')\n",
-    "    model.to('cuda')\n",
-    "\n",
-    "# envolvemos el modelo con .no_grad()\n",
-    "# para no hacer uso de las gradientes\n",
-    "with torch.no_grad():\n",
-    "    output = model(input_batch)\n",
-    "\n",
-    "# imprimimos las predicciones en formato de LOGITS\n",
-    "print(output[0])\n",
-    "probabilities = torch.nn.functional.softmax(output[0], dim=0)\n",
-    "\n",
-    "# imprimimos las salidas en formato de probabilidad\n",
-    "print(probabilities)"
-   ]
-  },
-  {
-   "source": [
-    "#### Uso de precisión mixta\n",
-    "\n",
-    "Se usa precisión mixta (amp) para poder reducir el uso de memoria mediante el uso de\n",
-    "tipos de datos más LIGEROS. "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# creamos algunos tensores (por defecto es de tipo float 32)\n",
-    "a_float32 = torch.rand((8, 8), device=\"cuda\")\n",
-    "b_float32 = torch.rand((8, 8), device=\"cuda\")\n",
-    "c_float32 = torch.rand((8, 8), device=\"cuda\")\n",
-    "d_float32 = torch.rand((8, 8), device=\"cuda\")\n",
-    "\n",
-    "with torch.cuda.amp.autocast(enabled=True):\n",
-    "    # torch.mm está en la lista de operaciones de \n",
-    "    # autocast que deberían ejecutarse en float16.\n",
-    "    # Las entradas son float32, pero la operación se \n",
-    "    # ejecuta en float16 y produce una salida float16.\n",
-    "    # No se requieren casteos manuales.\n",
-    "    e_float16 = torch.mm(a_float32, b_float32)\n",
-    "    # También maneja tipos de entrada mixtos\n",
-    "    f_float16 = torch.mm(d_float32, e_float16)\n",
-    "\n",
-    "\n",
-    "# Después de salir de autocast, llama a f_float16.float () para usar con float32\n",
-    "g_float32 = torch.mm(d_float32, f_float16.float())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(f_float16)\n"
    ]
   }
  ]
