--- a/Python-para-ML-y-DL/Notebooks/Class5.ipynb
+++ b/Python-para-ML-y-DL/Notebooks/Class5.ipynb
@@ -2075,10 +2075,10 @@
   },
   {
    "source": [
-    "### **[Binary Crossentropy](https://towardsdatascience.com/where-did-the-binary-cross-entropy-loss-function-come-from-ac3de349a715)**\n",
+    "### **[Crossentropy](https://ml-cheatsheet.readthedocs.io/en/latest/loss_functions.html)**\n",
     "\n",
     "<center>\n",
-    "<img src=\"https://miro.medium.com/max/2086/1*e9HcMYTPeN1cV56qqxe6dA.png\" width=\"80%\" height=\"90\">"
+    "<img src=\"https://gombru.github.io/assets/cross_entropy_loss/intro.png\" width=\"90%\" height=\"100%\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -2109,7 +2109,7 @@
     ")\n",
     "\n",
     "\n",
-    "def binary_crossentropy(Y, Y_hat):\n",
+    "def crossentropy(Y, Y_hat):\n",
     "    \"\"\"\n",
     "    Arguments:\n",
     "        -- Y : (ndarrray) This is Numpy's array with (n, m)\n",
@@ -2123,7 +2123,7 @@
     "        np.multiply(Y, np.log(Y_hat)) + np.multiply((1 - Y), np.log(1 - Y_hat)), axis=1, keepdims=True)\n",
     "\n",
     "\n",
-    "loss = binary_crossentropy(Y, Y_hat)\n",
+    "loss = crossentropy(Y, Y_hat)\n",
     "\n",
     "print(loss)\n"
    ]
