Topico NLP actualizado

--- a/NLP/Notebooks/0_NLP_Basics.ipynb
+++ b/NLP/Notebooks/0_NLP_Basics.ipynb
@@ -26,7 +26,10 @@
  "cells": [
   {
    "source": [
-    "# NLP\n"
+    "# NLP\n",
+    " Book Reference: Practical Natural Language Processing - June 2020\n",
+    "\n",
+    " <img src=\"images/book.png\">"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -372,7 +375,7 @@
    "source": [
     "from nltk.stem import WordNetLemmatizer\n",
     "lemmatizer = WordNetLemmatizer()\n",
-    "print(lemmatizer.lemmatize(\"was\", pos=\"v\")) # verb"
+    "print(lemmatizer.lemmatize(\"was\")) # verb"
    ]
   },
   {
@@ -442,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -595,27 +598,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "man bites dog\n[[0, 0, 1, 0, 0, 0], [0, 1, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0]]\n6\n"
+      "man bites dog\n[[1, 0, 0, 0, 0, 0], [0, 1, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0]]\n6\n"
      ]
     }
    ],
    "source": [
     "print(processed_docs[1])\n",
-    "onehot = get_onehot_vector(processed_docs[1]) #one hot representation for a text from our corpus.\n",
+    "onehot = get_onehot_vector(processed_docs[0]) #one hot representation for a text from our corpus.\n",
     "print(onehot)\n",
     "print(len(onehot[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +633,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 18
     }
    ],
    "source": [
@@ -644,6 +647,57 @@
     "- This representation does not give a fixed-length representation for text.  \n",
     "- It treats words as atomic units and has no notion of (dis)similarity between\n",
     "words. Is very poor at capturing the meaning of the word in relation to other words.  "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Bag of Words\n",
+    "See 2_Bag_of_Words.ipynb\n",
+    "\n",
+    "### Advantages\n",
+    "- Like one-hot encoding, BoW is fairly simple to understand and implement.  \n",
+    "- The vector space resulting from the BoW scheme captures the semantic similarity of documents. So if two documents have similar vocabulary, they’ll be closer to each other in the vector space and vice versa.\n",
+    "- We have a fixed-length encoding for any sentence of arbitrary length.\n",
+    "\n",
+    "### Disadvatanges  \n",
+    "- The size of the vector increases with the size of the vocabulary.  \n",
+    "- It does not capture the similarity between different words that mean the same\n",
+    "thing. (“I run”, “I ran”,)\n",
+    "- As the name indicates, it is a “bag” of words—word order information is lost in\n",
+    "this representation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 2. Distributed Representations\n",
+    "These methods gained momentum in the past six to seven years. They use neural network architectures to create dense, low-dimensional representations of words and texts.\n",
+    "\n",
+    "Key ideas:\n",
+    "- Distributional representation : BoW, One Hot vector: high dimensional and sparse vectors to represent words\n",
+    "- Distributed representation: Word2Vec, Glove: Low Dimensional and dense vectors\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Universal Text Representations\n",
+    "Use of contextual word representations to obtain word vectors:  \n",
+    "- Example : bank  \n",
+    "Neural architectures such as recurrent neural networks (RNNs) and transformers\n",
+    "were used to develop large-scale models of language (ELMo , BERT), which\n",
+    "can be used as pre-trained models to get text representations. Applying transfer learning"
    ],
    "cell_type": "markdown",
    "metadata": {}
