--- a/NLP/Notebooks/2_Bag_of_Words.ipynb
+++ b/NLP/Notebooks/2_Bag_of_Words.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 31
     }
    ],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,7 @@
     "data_yelp.columns = [\"Review_text\", \"Review_class\"]\n",
     "\n",
     "data = pd.concat([data_imdb, data_amazon, data_yelp])\n",
-    "data.shape\n",
-    "data[:10]"
+    "data.shape\n"
    ]
   },
   {
@@ -289,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.6236363636363637\n0.6877828054298643\n0.5922077922077922\n"
+      "0.8018181818181818\n0.8043087971274686\n0.8028673835125448\n"
      ]
     }
    ],
@@ -309,8 +308,8 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "model = GaussianNB()\n",
-    "#model  =  LogisticRegression()\n",
+    "#model = GaussianNB()\n",
+    "model  =  LogisticRegression()\n",
     "model.fit(X_train,y_train)\n",
     "\n",
     "y_pred = model.predict(X_test)\n",
