Topico NLP actualizado

--- a/NLP/Notebooks/0_NLP_Basics.ipynb
+++ b/NLP/Notebooks/0_NLP_Basics.ipynb
@@ -692,7 +692,7 @@
   },
   {
    "source": [
-    "### Universal Text Representations\n",
+    "### 3. Universal Text Representations\n",
     "Use of contextual word representations to obtain word vectors:  \n",
     "- Example : bank  \n",
     "Neural architectures such as recurrent neural networks (RNNs) and transformers\n",
