Topico NLP actualizado

--- a/NLP/Notebooks/2_Bag_of_Words.ipynb
+++ b/NLP/Notebooks/2_Bag_of_Words.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,21 +162,21 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Review_text</th>\n      <th>Review_class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A very, very, very slow-moving, aimless movie ...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Not sure who was more lost - the flat characte...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Attempting artiness with black &amp; white and cle...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Very little music or anything to speak of.</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>The best scene in the movie was when Gerardo i...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>The rest of the movie lacks art, charm, meanin...</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Wasted two hours.</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Saw the movie today and thought it was a good ...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>A bit predictable.</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Loved the casting of Jimmy Buffet as the scien...</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 3
     }
    ],
    "source": [
-    "data_imdb = pd.read_csv(\"imdb_labelled.txt\", delimiter='\\t', header=None)\n",
+    "data_imdb = pd.read_csv(\"data/imdb_labelled.txt\", delimiter='\\t', header=None)\n",
     "data_imdb.columns = [\"Review_text\", \"Review_class\"]\n",
     "\n",
-    "data_amazon = pd.read_csv(\"amazon_cells_labelled.txt\", delimiter='\\t', header=None)\n",
+    "data_amazon = pd.read_csv(\"data/amazon_cells_labelled.txt\", delimiter='\\t', header=None)\n",
     "data_amazon.columns = [\"Review_text\", \"Review_class\"]\n",
     "\n",
-    "data_yelp = pd.read_csv(\"yelp_labelled.txt\", delimiter='\\t', header=None)\n",
+    "data_yelp = pd.read_csv(\"data/yelp_labelled.txt\", delimiter='\\t', header=None)\n",
     "data_yelp.columns = [\"Review_text\", \"Review_class\"]\n",
     "\n",
     "data = pd.concat([data_imdb, data_amazon, data_yelp])\n",
-    "data.shape\n"
+    "data[0:10]\n"
    ]
   },
   {
