Topico NLP actualizado

--- a/NLP/Notebooks/0_NLP_Basics.ipynb
+++ b/NLP/Notebooks/0_NLP_Basics.ipynb
@@ -692,12 +692,49 @@
   },
   {
    "source": [
-    "### 3. Universal Text Representations\n",
+    "### 3. Universal Text Representations (State of the art)\n",
     "Use of contextual word representations to obtain word vectors:  \n",
     "- Example : bank  \n",
     "Neural architectures such as recurrent neural networks (RNNs) and transformers\n",
     "were used to develop large-scale models of language (ELMo , BERT), which\n",
     "can be used as pre-trained models to get text representations. Applying transfer learning"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "- Vector Embeddings with Transformers Architectures (BERT)  \n",
+    "\n",
+    "\n",
+    "<img src=\"images/hf_vector1.png\">\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Each word of a sentence apport in the vectorization of a wor.   \n",
+    "<img src=\"images/hf_vector2.png\">\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "A encoder is composed by Bidirectional neural networks and attention mechanisms. \n",
+    "\n",
+    "\n",
+    "<img src=\"images/hf_encoder.png\">\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "ELMO uses Recurrent Neural Networks inside his architecture (LSTM)\n",
+    "\n",
+    "<img src=\"images/elmo_lstm.png\">\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
