--- a/NLP/Notebooks/11_speech_command_recognition_with_torchaudio.ipynb
+++ b/NLP/Notebooks/11_speech_command_recognition_with_torchaudio.ipynb
@@ -30,6 +30,7 @@
         "cd72fe84fd8445e5beb296c52b6014b1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HBoxView",
             "_dom_classes": [],
@@ -50,6 +51,7 @@
         "f8d07bb06caf4ef89286ab450b108d37": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -101,6 +103,7 @@
         "7c3bc5f72b994fc998cdead80c51daf9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
             "style": "IPY_MODEL_d8fc553b115845759c9915a6ca3e1eea",
@@ -124,6 +127,7 @@
         "f49cc1cf839b491797b7a3733328fa09": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_db688cb02cb1401886ff466db2320114",
@@ -144,6 +148,7 @@
         "d8fc553b115845759c9915a6ca3e1eea": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "ProgressStyleModel",
@@ -159,6 +164,7 @@
         "aeb9d19082814b24830bd033b8fd8240": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -210,6 +216,7 @@
         "db688cb02cb1401886ff466db2320114": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -224,6 +231,7 @@
         "12593b13672547ff97a115a16ef0b9e3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -275,6 +283,7 @@
         "7e766ca445524e45b31ca40f1e876fbf": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HBoxView",
             "_dom_classes": [],
@@ -295,6 +304,7 @@
         "55581573d3d04691970278f09be3634a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -346,6 +356,7 @@
         "0d4668dd872e44278fe33d6ca49956f5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "ProgressView",
             "style": "IPY_MODEL_9165a876930e44d4ad9da371c35c5532",
@@ -369,6 +380,7 @@
         "df638f7243934b06bd5512a01f650fc8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "HTMLView",
             "style": "IPY_MODEL_d8f1580998ed416c9716a439938be1c5",
@@ -389,6 +401,7 @@
         "9165a876930e44d4ad9da371c35c5532": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "ProgressStyleModel",
@@ -404,6 +417,7 @@
         "9edcadf7363b4f48b12c490c1e5a4741": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -455,6 +469,7 @@
         "d8f1580998ed416c9716a439938be1c5": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
+          "model_module_version": "1.5.0",
           "state": {
             "_view_name": "StyleView",
             "_model_name": "DescriptionStyleModel",
@@ -469,6 +484,7 @@
         "46c8499673054d3fa611ff38df04aaf3": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
           "state": {
             "_view_name": "LayoutView",
             "grid_template_rows": null,
@@ -1002,7 +1018,7 @@
         "id": "j4AaG15e8kGP"
       },
       "source": [
-        "Las 35 etiquetas de audio son comandos que dicen los usuarios. Los primeros archivos son personas que dicen \"marvin\".\n",
+        "Las 35 etiquetas de audio son comandos que dicen los usuarios. Los primeros archivos son personas que dicen \"backward\".\n",
         "\n",
         "\n"
       ]
@@ -1054,7 +1070,7 @@
         "id": "1p3zNWSQ8kGS"
       },
       "source": [
-        "El último archivo es alguien que dice \"visual\".\n",
+        "El último archivo es alguien que dice \"zero\".\n",
         "\n",
         "\n"
       ]
@@ -1243,8 +1259,8 @@
         "\n",
         "    # Agrupe la lista de tensores en un tensor por lotes\n",
         "    tensors = pad_sequence(tensors)\n",
-        "    targets = torch.stack(targets)\n",
-        "\n",
+        "    targets = torch.stack(targets) \n",
+        "    \n",
         "    return tensors, targets\n",
         "\n",
         "\n",
